fix techstack overlapping on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -267,6 +267,11 @@ body {
     flex: 1;
     gap: 2rem;
     flex-direction: column-reverse;
+   
+    
+  }
+  .nav-about{
+    flex: 1;
   }
 
   .about-section-image-container {
@@ -283,11 +288,14 @@ body {
   }
 
   .techstack {
-    gap: 1rem;
+    gap: 0.8rem;
     width: 100%;
     flex-wrap: wrap;
     justify-content: center;
-    max-height: 9rem;
+    height: 8vmin;
+  /* margin-top: 8rem; */
+
+  
   }
 
   .project-card-section {
